# image-classification-techniques

./: .gitignore  README.md  image-classification-techniques.md  image-classification-techniques.py  marimo_embetter_test.py  pyproject.toml  submission_results.csv  test_packages.py  test_packages2.py  test_true_values.csv  vlm_submission_results.csv  vlm_test_submission.csv  zero_shot_submission_results.csv
__marimo__/session/: image-classification-techniques.py.json  marimo_embetter_test.py.json
